--- a/src/stylesheets/dark_blue.qss
+++ b/src/stylesheets/dark_blue.qss
@@ -298,14 +298,24 @@ QWidget#layersPanel > QCheckBox,
 QWidget#autoMarginsLayout_2,
 QGroupBox#bwOptionsGroupBox,
 QGroupBox#bwOptionsGroupBox > QLabel,
-QGroupBox#bwOptionsGroupBox > QSlider,
 QGroupBox#foregroundOptionsGroupBox,
 QGroupBox#foregroundOptionsGroupBox > QLabel,
 QGroupBox#foregroundOptionsGroupBox > QSlider,
 QGroupBox#despecklingGroupBox,
 QGroupBox#despecklingGroupBox > QLabel,
 QGroupBox#outputResolutionGroupBox > QLabel,
-QGroupBox#outputResolutionGroupBox
+QGroupBox#outputResolutionGroupBox,
+QWidget#bwOtsuOptionsPanel,
+QWidget#bwOtsuOptionsPanel > QSlider,
+QWidget#bwSauvolaOptionsPanel,
+QWidget#bwSauvolaOptionsPanel > QLabel,
+QWidget#bwSauvolaOptionsPanel > QSlider,
+QWidget#bwWolfOptionsPanel,
+QWidget#bwWolfOptionsPanel > QLabel,
+QWidget#bwWolfOptionsPanel > QSlider,
+QWidget#bwGatosOptionsPanel,
+QWidget#bwGatosOptionsPanel > QLabel,
+QWidget#bwGatosOptionsPanel > QSlider
 {
     background-color: #3D3D3F;
 }
